--- a/_sass/utilities/_measure.scss
+++ b/_sass/utilities/_measure.scss
@@ -3,5 +3,5 @@
 }
 
 .measure-wide {
-  max-width: 80ch;
+  max-width: 102ch;
 }
